programmingLanguages/P3/PsiCoderParser.java
// Generated from PsiCoder.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PsiCoderParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		STR=53, CAR=54, FLT=55, INT=56, ID=57, WS=58, COM=59;
	public static final int
		RULE_psicoder = 0, RULE_global = 1, RULE_estructura = 2, RULE_estructuraAux1 = 3, 
		RULE_estructuraAux = 4, RULE_globalAux1 = 5, RULE_globalAux = 6, RULE_globalAuxAux = 7, 
		RULE_funcion = 8, RULE_parametro1 = 9, RULE_parametro = 10, RULE_parametroAux = 11, 
		RULE_parametroAuxAux = 12, RULE_retornar = 13, RULE_variableG = 14, RULE_comaAsignacion1 = 15, 
		RULE_comaAsignacion2 = 16, RULE_comaAsignacion = 17, RULE_comaAsignacionAux = 18, 
		RULE_comaAsignacionAuxAux = 19, RULE_principal = 20, RULE_idContenido = 21, 
		RULE_idAux = 22, RULE_comaExpresion1 = 23, RULE_comaExpresion2 = 24, RULE_comaExpresion = 25, 
		RULE_estructuraPunto1 = 26, RULE_estructuraPunto = 27, RULE_estructuraPuntoAux = 28, 
		RULE_estructuraPunto2 = 29, RULE_estructuraPuntoAux2 = 30, RULE_variable = 31, 
		RULE_leer = 32, RULE_imprimir = 33, RULE_comaImpresion1 = 34, RULE_comaImpresion = 35, 
		RULE_si = 36, RULE_siNo1 = 37, RULE_siNo = 38, RULE_mientras = 39, RULE_principal1 = 40, 
		RULE_hacer = 41, RULE_principalHacer = 42, RULE_para = 43, RULE_principalPara = 44, 
		RULE_seleccionar = 45, RULE_seleccionarAux1 = 46, RULE_seleccionarAux = 47, 
		RULE_seleccionarAuxAux = 48, RULE_romper = 49, RULE_expresion = 50, RULE_expE = 51, 
		RULE_expE2 = 52, RULE_expE3 = 53, RULE_expE4 = 54, RULE_expE5 = 55, RULE_expR = 56, 
		RULE_expR2 = 57, RULE_expR3 = 58, RULE_expR4 = 59, RULE_expR5 = 60, RULE_expS = 61, 
		RULE_expS2 = 62, RULE_expBool = 63, RULE_expB = 64, RULE_expB2 = 65, RULE_expB3 = 66, 
		RULE_expB4 = 67, RULE_expB5 = 68, RULE_expB6 = 69, RULE_expB7 = 70, RULE_dt = 71;
	public static final String[] ruleNames = {
		"psicoder", "global", "estructura", "estructuraAux1", "estructuraAux", 
		"globalAux1", "globalAux", "globalAuxAux", "funcion", "parametro1", "parametro", 
		"parametroAux", "parametroAuxAux", "retornar", "variableG", "comaAsignacion1", 
		"comaAsignacion2", "comaAsignacion", "comaAsignacionAux", "comaAsignacionAuxAux", 
		"principal", "idContenido", "idAux", "comaExpresion1", "comaExpresion2", 
		"comaExpresion", "estructuraPunto1", "estructuraPunto", "estructuraPuntoAux", 
		"estructuraPunto2", "estructuraPuntoAux2", "variable", "leer", "imprimir", 
		"comaImpresion1", "comaImpresion", "si", "siNo1", "siNo", "mientras", 
		"principal1", "hacer", "principalHacer", "para", "principalPara", "seleccionar", 
		"seleccionarAux1", "seleccionarAux", "seleccionarAuxAux", "romper", "expresion", 
		"expE", "expE2", "expE3", "expE4", "expE5", "expR", "expR2", "expR3", 
		"expR4", "expR5", "expS", "expS2", "expBool", "expB", "expB2", "expB3", 
		"expB4", "expB5", "expB6", "expB7", "dt"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'funcion_principal'", "'fin_principal'", "'estructura'", "'fin_estructura'", 
		"';'", "','", "'funcion'", "'('", "')'", "'hacer'", "'retornar'", "'fin_funcion'", 
		"'='", "'.'", "'leer'", "'imprimir'", "'si'", "'entonces'", "'fin_si'", 
		"'si_no'", "'mientras'", "'fin_mientras'", "'para'", "'entero'", "'fin_para'", 
		"'seleccionar'", "'entre'", "'fin_seleccionar'", "'defecto'", "':'", "'caso'", 
		"'romper'", "'-'", "'+'", "'*'", "'/'", "'%'", "'!'", "'||'", "'&&'", 
		"'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'falso'", "'verdadero'", 
		"'booleano'", "'caracter'", "'real'", "'cadena'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "STR", "CAR", "FLT", "INT", "ID", "WS", 
		"COM"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PsiCoder.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PsiCoderParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PsicoderContext extends ParserRuleContext {
		public List<GlobalContext> global() {
			return getRuleContexts(GlobalContext.class);
		}
		public GlobalContext global(int i) {
			return getRuleContext(GlobalContext.class,i);
		}
		public PrincipalContext principal() {
			return getRuleContext(PrincipalContext.class,0);
		}
		public PsicoderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_psicoder; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterPsicoder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitPsicoder(this);
		}
	}

	public final PsicoderContext psicoder() throws RecognitionException {
		PsicoderContext _localctx = new PsicoderContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_psicoder);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			global();
			setState(145);
			match(T__0);
			setState(146);
			principal();
			setState(147);
			match(T__1);
			setState(148);
			global();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalContext extends ParserRuleContext {
		public EstructuraContext estructura() {
			return getRuleContext(EstructuraContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public VariableGContext variableG() {
			return getRuleContext(VariableGContext.class,0);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitGlobal(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global);
		try {
			setState(154);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				estructura();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				funcion();
				}
				break;
			case T__23:
			case T__48:
			case T__49:
			case T__50:
			case T__51:
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(152);
				variableG();
				}
				break;
			case EOF:
			case T__0:
				enterOuterAlt(_localctx, 4);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstructuraContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PsiCoderParser.ID, 0); }
		public EstructuraAux1Context estructuraAux1() {
			return getRuleContext(EstructuraAux1Context.class,0);
		}
		public GlobalContext global() {
			return getRuleContext(GlobalContext.class,0);
		}
		public EstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estructura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitEstructura(this);
		}
	}

	public final EstructuraContext estructura() throws RecognitionException {
		EstructuraContext _localctx = new EstructuraContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_estructura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(T__2);
			setState(157);
			match(ID);
			setState(158);
			estructuraAux1();
			setState(159);
			match(T__3);
			setState(160);
			global();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstructuraAux1Context extends ParserRuleContext {
		public EstructuraAuxContext estructuraAux() {
			return getRuleContext(EstructuraAuxContext.class,0);
		}
		public EstructuraAux1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estructuraAux1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterEstructuraAux1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitEstructuraAux1(this);
		}
	}

	public final EstructuraAux1Context estructuraAux1() throws RecognitionException {
		EstructuraAux1Context _localctx = new EstructuraAux1Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_estructuraAux1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			estructuraAux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstructuraAuxContext extends ParserRuleContext {
		public GlobalAux1Context globalAux1() {
			return getRuleContext(GlobalAux1Context.class,0);
		}
		public EstructuraAuxContext estructuraAux() {
			return getRuleContext(EstructuraAuxContext.class,0);
		}
		public TerminalNode ID() { return getToken(PsiCoderParser.ID, 0); }
		public DtContext dt() {
			return getRuleContext(DtContext.class,0);
		}
		public EstructuraAuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estructuraAux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterEstructuraAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitEstructuraAux(this);
		}
	}

	public final EstructuraAuxContext estructuraAux() throws RecognitionException {
		EstructuraAuxContext _localctx = new EstructuraAuxContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_estructuraAux);
		try {
			setState(173);
			switch (_input.LA(1)) {
			case T__23:
			case T__48:
			case T__49:
			case T__50:
			case T__51:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(164);
					match(ID);
					}
					break;
				case T__23:
				case T__48:
				case T__49:
				case T__50:
				case T__51:
					{
					setState(165);
					dt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(168);
				globalAux1();
				setState(169);
				match(T__4);
				setState(170);
				estructuraAux();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalAux1Context extends ParserRuleContext {
		public GlobalAuxContext globalAux() {
			return getRuleContext(GlobalAuxContext.class,0);
		}
		public GlobalAux1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalAux1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterGlobalAux1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitGlobalAux1(this);
		}
	}

	public final GlobalAux1Context globalAux1() throws RecognitionException {
		GlobalAux1Context _localctx = new GlobalAux1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_globalAux1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			globalAux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalAuxContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PsiCoderParser.ID, 0); }
		public GlobalAuxAuxContext globalAuxAux() {
			return getRuleContext(GlobalAuxAuxContext.class,0);
		}
		public GlobalAuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalAux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterGlobalAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitGlobalAux(this);
		}
	}

	public final GlobalAuxContext globalAux() throws RecognitionException {
		GlobalAuxContext _localctx = new GlobalAuxContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_globalAux);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(ID);
			setState(178);
			globalAuxAux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalAuxAuxContext extends ParserRuleContext {
		public GlobalAuxContext globalAux() {
			return getRuleContext(GlobalAuxContext.class,0);
		}
		public GlobalAuxAuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalAuxAux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterGlobalAuxAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitGlobalAuxAux(this);
		}
	}

	public final GlobalAuxAuxContext globalAuxAux() throws RecognitionException {
		GlobalAuxAuxContext _localctx = new GlobalAuxAuxContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_globalAuxAux);
		try {
			setState(183);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(180);
				match(T__5);
				setState(181);
				globalAux();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public Token tipoFuncionID;
		public DtContext tipoFuncion;
		public Token idFuncion;
		public Parametro1Context parametro1() {
			return getRuleContext(Parametro1Context.class,0);
		}
		public PrincipalContext principal() {
			return getRuleContext(PrincipalContext.class,0);
		}
		public RetornarContext retornar() {
			return getRuleContext(RetornarContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(PsiCoderParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PsiCoderParser.ID, i);
		}
		public DtContext dt() {
			return getRuleContext(DtContext.class,0);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitFuncion(this);
		}
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(T__6);
			setState(188);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(186);
				((FuncionContext)_localctx).tipoFuncionID = match(ID);
				}
				break;
			case T__23:
			case T__48:
			case T__49:
			case T__50:
			case T__51:
				{
				setState(187);
				((FuncionContext)_localctx).tipoFuncion = dt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(190);
			((FuncionContext)_localctx).idFuncion = match(ID);
			setState(191);
			match(T__7);
			setState(192);
			parametro1();
			setState(193);
			match(T__8);
			setState(194);
			match(T__9);
			setState(195);
			principal();
			setState(196);
			match(T__10);
			setState(197);
			retornar();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parametro1Context extends ParserRuleContext {
		public ParametroContext parametro() {
			return getRuleContext(ParametroContext.class,0);
		}
		public Parametro1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterParametro1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitParametro1(this);
		}
	}

	public final Parametro1Context parametro1() throws RecognitionException {
		Parametro1Context _localctx = new Parametro1Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_parametro1);
		try {
			setState(201);
			switch (_input.LA(1)) {
			case T__23:
			case T__48:
			case T__49:
			case T__50:
			case T__51:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(199);
				parametro();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametroContext extends ParserRuleContext {
		public ParametroAuxContext parametroAux() {
			return getRuleContext(ParametroAuxContext.class,0);
		}
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterParametro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitParametro(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_parametro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			parametroAux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametroAuxContext extends ParserRuleContext {
		public Token tipoParametro;
		public Token idParametro;
		public ParametroAuxAuxContext parametroAuxAux() {
			return getRuleContext(ParametroAuxAuxContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(PsiCoderParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PsiCoderParser.ID, i);
		}
		public DtContext dt() {
			return getRuleContext(DtContext.class,0);
		}
		public ParametroAuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametroAux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterParametroAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitParametroAux(this);
		}
	}

	public final ParametroAuxContext parametroAux() throws RecognitionException {
		ParametroAuxContext _localctx = new ParametroAuxContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_parametroAux);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(205);
				((ParametroAuxContext)_localctx).tipoParametro = match(ID);
				}
				break;
			case T__23:
			case T__48:
			case T__49:
			case T__50:
			case T__51:
				{
				setState(206);
				dt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(209);
			((ParametroAuxContext)_localctx).idParametro = match(ID);
			setState(210);
			parametroAuxAux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametroAuxAuxContext extends ParserRuleContext {
		public ParametroAuxContext parametroAux() {
			return getRuleContext(ParametroAuxContext.class,0);
		}
		public ParametroAuxAuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametroAuxAux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).enterParametroAuxAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsiCoderListener ) ((PsiCoderListener)listener).exitParametroAuxAux(this);
		}
	}

	public final ParametroAuxAuxContext parametroAuxAux() throws RecognitionException {
		ParametroAuxAuxContext _localctx = new ParametroAuxAuxContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_parametroAuxAux);
		try {
			setState(215);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(212);
				match(T__5);
				setState(213);
				parametroAux();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
